# mlogconfig

./: .gitignore  .pylintrc  LICENSE.md  PYTHON_TIPS.md  README.md  file_validation.py  get_version.py  logger.py  macOS_update_apps_interactive.py  mlogconfig-1.py  mlogconfig-2.py  mlogconfig-3.py  mlogconfig.py  pyproject.toml  rename_files.py  rename_files_in_folder.py  setup.py  tmp.py
.github/: dependabot.yml
.github/workflows/: automate_release.yml  codeql.yml  pypi-release.yml  setup-version-change.yml
Windows/: dir_exclude.py  dir_startdir.py  rename_files_in_folder.py
mlogconfig/: mlogconfig.py
mlogconfig/modules/: validate.py
